Major Progress w/CSS grid. Next-steps: Align images, correct fonts, add decor

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,183 +1,133 @@
- html body {
-    background-color: #fcc289;
-    font-size: 62.5%;
-    /* height: 100%; */
-  }
-/* .navcontainer {
-  background-color: #fa4343;
-  display:inline;
-} */
-nav {
-  background-color: #fa4343;
-  /* display:inline-block; */
-  width:100%;
+html {
+  margin:0 auto;
+  padding-top:20px;
+  font-size:64.4%;
 }
-.navcontainer {
-  display: grid;
-  grid-row:repeat(3,1fr);
-  list-style: none;
-  text-align: center;
-  place-self:center;
-
+h1, h2 {
+  color:#f24c4c;
 }
-li {
-  font-family:"Laila", serif;
-  font-size:1.5rem;
+.svg {
+  font-size:1.3rem;
   text-align:center;
+}
+svg {
+  fill:#f24c4c;
+  max-width: 150px;
+  max-height:auto;
 }
 h1 {
-  font-size:2.5rem;
+  font-size:3em;
+  font-weight:700;
+  text-transform: uppercase;
+  font-family: 'Exo 2', sans-serif;
+}
+h2 {
+  font-size:2.8em;
+  font-weight:400;
+  text-transform: capitalize;
+  font-family: 'Montserrat', sans-serif;
+}
+h4, p {
+  color:#fa4343;
+    font-family:'Libre Franklin', sans-serif;
 }
 h4 {
-    color: #f24c4c;
-    font-size:1.3rem;
-    text-transform: uppercase;
-    font-family: montserrat, san-serif;
-  }
-h2 {
-      font-size:1.8rem;
-    }
+  font-size:2.1em;
+  font-weight:400;
+}
 p {
-    /* padding:2rem; */
-    /* margin:0.5rem; */
-    font-size:1.3rem;
-}
-#maincontent {
-    height:100%;
-    width:100%;
-    display:grid;
-    /* margin:auto; */
-    /* background-color:#fcc289; */
-    grid-template-rows: auto auto;
-    grid-row-gap:1rem;
-    grid-template-areas:"header"
-                        "carousel";
-                      }
-.headercontainer {
-    display:subgrid;
-    grid-template-columns: auto 3ft auto;
-    grid-template-rows:repeat(4, 1fr);
-    grid-template-areas:". .svglogo . ."
-                        ". . brandname . ."
-                        ". . tagline . ."
-                         ". . bio . ." ;
-                       }
-#carouselcontainer {
-  /* height:100%;
-  width:100%; */
-  display:subgrid;
-  justify-items:center;
-  text-align:center;
-  /* grid-row-gap:5px;
-  grid-template-rows:repeat(8, 1fr);
-  grid-auto-rows: minmax(100px, auto); */
-  grid-template-areas:"worktitle1"
-                      "photograph1"
-                      "worktitle2"
-                      "photograph2"
-                      "worktitle3"
-                      "photograph3"
-                      "worktitle4"
-                      "photograph4";
-}
-.griditem {
-    text-align:center;
-    padding:auto;
-    margin:auto;
-    }
-#svglogo {
-    grid-area:svglogo;
-  }
-#logo :hover {
-  fill: #fcc289;
-}
-#brandname {
-    color: #fa4343;
-    text-transform: uppercase;
-    font-family: montserrat, san-serif;
-    grid-area:brandname;
-  }
-#tag {
-    color: #fa4343;
-    /* font-size:8em; */
-    text-transform: uppercase;
-    font-family: montserrat, san-serif;
-    grid-area:tagline;
-  }
-#bio {
-    color: #f24c4c;
-    font-family: "Laila", serif;
-    letter-spacing:0.1em;
-    grid-area:bio;
-    /* grid-template-columns: 1fr 3fr 1fr; */}
+  font-size:2.3em;
+  font-weight:100;
 
-  }
-.work {
-  place-self:center;
 }
-article > img {
+strong {
+  text-transform: capitalize;
+  font-weight: bold;
+}
+img, .card {
+  max-width:100%;
+  margin: 0 auto;
+}
+.pagegrid {
   margin:auto;
-  /* max-width:15rem; */
-  width:45%;
-  max-width: 400px;
-  max-height: 600px;
-  height: auto;
+  background-color: #fcc289;
+  place-self:center;
+  text-align: center;
+  display:grid;
+  grid-template-rows;repeat(7,1fr);
+  grid-template-areas: "masthead"
+                        "main"
+                        "cardone"
+                        "cardtwo"
+                        "cardthree"
+                        "cardfour"
+                        "foot";
 }
-.card {
-  grid-auto-rows:minmax(100px, auto);
-  display: grid;
-  grid-gap: 1em;
-}
-.one {
-  grid-area:one;
-}
-.two {
-  grid-area:two;
-}
-.three {
-  grid-area:three;
-}
-.four {
-  grid-area:four;
-}
-/* .titleone {
-  grid-area:titleone;
-} */
-/* .titletwo {
-  grid-area:titletwo; */
-}
-/* .titlethree {
-  grid-area:titlethree; */
-}
-/* .titlefour {
-  grid-area:titlefour; */
-}
-/* .one {
-  grid-area:one; */
-}
-/* .two {
-  grid-area:two; */
-}
-/* .three {
-  grid-area:three; */
-}
-/* .four {
-  grid-area:four; */
-}
-  #carouselcontainer {
-    grid-gap:5px;
-    grid-template-rows: 1fr;
-    grid-template-columns:repeat(5, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-  }
-@media only screen and (min-width: 500px) {
-  #carouselcontainer {
-    display:flex;
-    grid-gap: 1em;
-    /* grid-template-columns:1fr 1fr; */
-    /* grid-template-areas:
-    "one" "two"
-    "three" "four"; */
-    }
 
+@media screen and (min-width:540px){
+  html {
+    font-size:74.4%
+  }
+  .pagegrid {
+    grid-gap:10px;
+    grid-template-columns:repeat(2,auto);
+    grid-template-rows:repeat(5,auto);
+    grid-template-areas:"masthead masthead"
+                          "main main"
+                        "cardone cardtwo"
+                        "cardthree cardfour"
+                           "foot foot";
+                         }
+}
+@media screen and (min-width:1000px){
+  html{
+    font-size:84.4%
+    margin:0 auto;
+  }
+  .pagegrid {
+    grid-template-columns:repeat(4,auto);
+    grid-template-rows:repeat(4,auto);
+    grid-template-areas:"masthead masthead masthead masthead"
+                          "main main main main"
+                        "cardone cardtwo cardthree cardfour"
+                           "foot foot foot foot";
+                         }
+}
+
+.card {
+ /* background-color:#f9ba7a; */
+ display:grid;
+ place-self:center;
+ grid-template-rows:auto 3fr;
+ grid-auto-rows:minmax(auto, auto);
+}
+.masthead {
+  grid-area:masthead;
+  text-align:center;
+}
+.main {
+  grid-area:main;
+  text-align:center;
+}
+.navbar {
+  background-color: #f24c4c;
+}
+.foot > p {
+  color:#fcc289;
+}
+.foot {
+  grid-area:foot;
+  background-color:#f24c4c;
+}
+#cardone {
+  grid-area:cardone;
+}
+#cardtwo {
+  grid-ara:cardtwo;
+}
+#cardthree {
+  grid-area:cardthree;
+}
+#cardfour {
+  grid-area:cardfour;
 }
